--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "svgo": "svgo -f src/assets/svgs -o src/assets/icons --config=src/assets/svgo.config.js"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "element-plus": "^2.3.4",
     "pinia": "^2.0.32",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
@@ -23,6 +27,7 @@
     "@types/node": "^18.14.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "@vue-macros/reactivity-transform": "^0.3.5",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
@@ -31,10 +36,12 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
     "sass": "^1.62.1",
+    "svgo": "^3.0.2",
     "typescript": "~4.8.4",
     "unplugin-auto-import": "^0.15.3",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.2.0"
   }
 }
