--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,30 @@
 {
   "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["types/**/*.ts","types/**/*.d.ts", "src/**/*.ts","src/**/*.d.ts","src/**/*.tsx", "src/**/*.vue"],
+  "include": [
+    "types/**/*.ts",
+    "types/**/*.d.ts",
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "src/assets/svgo.config.js"
+  ],
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": {//此处映射相对于baseUrl
+    "paths": {
+      //此处映射相对于baseUrl,ide智能提示
       "@/*": ["./src/*"],
-      "#/*":["./types/*"]
+      "#/*": ["./types/*"]
     },
-    // "lib": ["ESNext"],// 指定目标运行环境的内置库声明
-    "types": ["vite/client","element-plus/global"],// 加载哪些模块的声明文件
-    "typeRoots": ["./node_modules/@types","./types"]// 声明文件查找的位置
+    "lib": ["ESNext", "DOM", "DOM.Iterable"], // 指定目标运行环境的内置库声明
+    "types": ["vite/client", "element-plus/global"], // 加载哪些模块的声明文件
+    "typeRoots": ["./node_modules/@types", "./types"] // 声明文件查找的位置
   },
 
   "references": [
     {
       "path": "./tsconfig.node.json"
     }
-  ]
+  ],
+  "exclude": ["node_modules", "dist", "**/*.js", "*.min.js"]
 }
