--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,15 @@
 {
-  "recommendations": ["Vue.volar", "Vue.vscode-typescript-vue-plugin"]
+  "recommendations": [
+    "Vue.volar",
+    "Vue.vscode-typescript-vue-plugin",
+    "dbaeumer.vscode-eslint",
+    "stylelint.vscode-stylelint",
+    "esbenp.prettier-vscode",
+    // "mrmlnc.vscode-less",
+    // "lokalise.i18n-ally",
+    // "antfu.iconify",
+    "mikestead.dotenv",
+    "bradlc.vscode-tailwindcss",
+    "christian-kohler.path-intellisense"
+  ]
 }
