--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,11 @@
       "@/*": ["./src/*"],
       "#/*": ["./types/*"]
     },
+    "allowJs": true,
     "lib": ["ESNext", "DOM", "DOM.Iterable"], // 指定目标运行环境的内置库声明
     "types": ["vite/client", "element-plus/global"], // 加载哪些模块的声明文件
-    "typeRoots": ["./node_modules/@types", "./types"], // 声明文件查找的位置
-    "ignoreDeprecations": "5.0"
+    "typeRoots": ["./node_modules/@types", "./types"] // 声明文件查找的位置
+    // "ignoreDeprecations": "5.0"
   },
 
   "references": [
