--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,7 +3,7 @@
   "include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "playwright.config.*"],
   "compilerOptions": {
     "composite": true,
-    "types": ["node"],
-    "ignoreDeprecations": "5.0"
+    "types": ["node"]
+    // "ignoreDeprecations": "5.0"
   }
 }
