--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint:eslint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "lint:prettier": "prettier --write src/",
     "lint:stylelint": "stylelint --cache --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
+    "lint:lint-staged": "lint-staged",
+    "prepare": "husky install",
     "svgo": "svgo -f src/assets/svgs -o src/assets/icons --config=src/assets/svgo.config.js"
   },
   "dependencies": {
