--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "commit": "git-cz",
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit",
+    "type-check": "vue-tsc --noEmit --skipLibCheck",
     "lint:eslint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "lint:prettier": "prettier --write src/",
     "lint:stylelint": "stylelint --cache --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
@@ -23,6 +24,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^17.6.3",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/node": "^18.16.5",
     "@vitejs/plugin-vue": "^4.0.0",
@@ -32,6 +34,10 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.14",
+    "commitizen": "^4.3.0",
+    "commitlint": "^17.6.3",
+    "cz-conventional-changelog": "^3.3.0",
+    "cz-git": "^1.6.1",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "husky": "^8.0.3",
@@ -81,5 +87,10 @@
     "*.md": [
       "prettier --write"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-git"
+    }
   }
 }
