--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "lint:stylelint": "stylelint --cache --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
     "lint:lint-staged": "lint-staged",
     "prepare": "husky install",
+    "new": "plop",
     "svgo": "svgo -f src/assets/svgs -o src/assets/icons --config=src/assets/svgo.config.js"
   },
   "dependencies": {
     "@vueuse/core": "^10.1.2",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
     "element-plus": "^2.3.4",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
@@ -44,6 +46,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
+    "plop": "^3.1.2",
     "postcss": "^8.4.23",
     "postcss-html": "1.4.0",
     "postcss-scss": "3.0.0",
