test: 抽离全局配置

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,7 +6,8 @@
     "cypress.config.*",
     "playwright.config.*",
     "build/**/*.ts",
-    "types/**/*.d.ts"
+    "types/**/*.d.ts",
+    "./package.json"
   ],
   "compilerOptions": {
     "composite": true,
