--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "vite-vue3-ts-demo",
   "version": "0.0.0",
   "private": true,
+  "author": {
+    "name": "dragon",
+    "email": "785864219@qq.com"
+  },
   "scripts": {
     "commit": "git-cz",
     "dev": "vite",
-    "build": "run-p type-check build-only",
+    "build:type-check": "run-p type-check build-only",
     "preview": "vite preview",
-    "build-only": "vite build",
+    "build": "cross-env NODE_ENV=production vite build && esno ./build/script/postBuild.ts",
+    "build:report": "cross-env REPORT=true pnpm build",
     "type-check": "vue-tsc --noEmit --skipLibCheck",
     "lint:eslint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "lint:prettier": "prettier --write src/",
@@ -29,7 +34,9 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^17.6.3",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.16.5",
+    "@vitejs/plugin-legacy": "^4.0.3",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue-macros/reactivity-transform": "^0.3.5",
@@ -37,12 +44,16 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.14",
+    "chalk": "^5.2.0",
     "commitizen": "^4.3.0",
     "commitlint": "^17.6.3",
+    "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "cz-git": "^1.6.1",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
+    "esno": "^0.16.3",
+    "fs-extra": "^11.1.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
@@ -51,6 +62,7 @@
     "postcss-html": "1.4.0",
     "postcss-scss": "3.0.0",
     "prettier": "^2.8.4",
+    "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.62.1",
     "stylelint": "^14.7.1",
     "stylelint-config-prettier": "^9.0.3",
