--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "cz-git": "^1.6.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "esno": "^0.16.3",
