test: 提取VITE_GLOBAL_XX变量到window中

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ VITE_PORT=9527
 VITE_GLOBAL_APP_TITLE=vue3_spa
 
 # 全局window配置 key
-VITE_WINDOW_CONFIG_KEY = VUE3_APP
+VITE_GLOBAL_WINDOW_CONFIG_KEY = VUE3_APP
