--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.16.5",
     "@vitejs/plugin-legacy": "^4.0.3",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue-macros/reactivity-transform": "^0.3.5",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
@@ -71,7 +71,7 @@
     "sass": "^1.62.1",
     "stylelint": "^14.7.1",
     "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-recess-order": "^3.0.0",
+    "stylelint-config-recess-order": "3.1.0",
     "stylelint-config-recommended": "^7.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^25.0.0",
@@ -81,10 +81,10 @@
     "typescript": "~4.8.4",
     "unplugin-auto-import": "^0.15.3",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.1.4",
+    "vite": "^4.3.5",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vue-tsc": "^1.2.0"
+    "vue-tsc": "^1.6.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
