--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "type-check": "vue-tsc --noEmit --skipLibCheck"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "@vueuse/core": "^10.1.2",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
