--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "element-plus": "^2.3.4",
+    "lodash-es": "^4.17.21",
     "pinia": "^2.0.32",
     "vue": "^3.3.2",
     "vue-router": "^4.1.6"
@@ -40,6 +41,7 @@
     "@commitlint/config-conventional": "^17.6.3",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/fs-extra": "^11.0.1",
+    "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.16.5",
     "@vitejs/plugin-legacy": "^4.0.3",
     "@vitejs/plugin-vue": "^4.2.3",
